--- a/css/sections/trending.css
+++ b/css/sections/trending.css
@@ -1,93 +1,120 @@
-.trending{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-}
-.trending__discover{
-    position: absolute;
-    top: 44%;
-    left: 44%;
-    background-color: var(--secondary-color);
-    width: 160px;
-    height: 160px;
-    border-radius: 100%;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.trending__discover p{
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    text-transform:uppercase;
-    font-family: var(--plus-jakarta-sans);
-}
-.trending-sushi, .trending-drinks{
-    width: 100%;
-    min-height: 640px;
-    display: flex;
-    flex-direction: row;
+.trending {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
-.trending__content{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 32px 64px;
+.trending__discover {
+  position: absolute;
+  top: 44%;
+  left: 44%;
+  z-index: 1;
+
+  width: 160px;
+  height: 160px;
+
+  border-radius: 100%;
+  background-color: var(--secondary-color);
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.trending__list{
-    list-style: none;
-    flex-wrap: wrap;
-    gap: 20px;
+
+.trending__discover p {
+  font-size: 18px;
+  font-weight: 500;
+  font-family: var(--plus-jakarta-sans);
+
+  text-transform: uppercase;
+  color: #fff;
 }
+
+.trending-sushi,
+.trending-drinks {
+  width: 100%;
+  min-height: 640px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.trending__content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  padding: 32px 64px;
+}
+
+.trending__list {
+  list-style: none;
+
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
 .trending__list li {
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 12px;
-    min-width: 210px;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 12px;
+
+  min-width: 210px;
 }
-.trending__icon{
-    width: 24px;
-    height: 24px;
-    background: var(--primary-color);
-    border-radius: 100%;
+
+.trending__icon {
+  width: 24px;
+  height: 24px;
+
+  border-radius: 100%;
+  background-color: var(--primary-color);
 }
+
 .trending__icon img {
-    width: 50%;
-    height: 50%;
-    object-fit: contain;
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
 }
+
 .trending__list p {
-    font-size: 16px;
-    font-family: var(--plus-jakarta-sans);
-    font-weight: 500;
-    flex: 1;
-    color: var(--secondary-color);
+  flex: 1;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: var(--plus-jakarta-sans);
+
+  color: var(--secondary-color);
 }
-.trending__image{
-    flex: 1;
-    position: relative;
-    padding: 32px 64px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background: var(--color-white);
-    background-position: center;
+
+.trending__image {
+  flex: 1;
+
+  position: relative;
+  padding: 32px 64px;
+
+  background-color: var(--color-white);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
-.trending-sushi, .trending__image{
-    background-image: url(../../assets/japanese_sushi.png);
+
+.trending-sushi .trending__image {
+  background-image: url("../../assets/japanese_sushi.png");
 }
-.trending-drink, .trending__image{
-    background-image: url(../../assets/japanese_drinks.png);
+
+.trending-drink .trending__image {
+  background-image: url("../../assets/japanese_drinks.png");
 }
+
 .trending__image img {
-    width: 254px;
-    height: 260px;
-    object-fit: contain;
+  width: 254px;
+  height: 260px;
+  object-fit: contain;
 }
 
 /* Arrows */
